--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "react-dom": "^15.6.1",
     "react-jss": "^7.1.0",
     "react-modal": "^2.2.4",
-    "react-scripts": "1.0.12"
+    "react-redux": "^5.0.6",
+    "react-scripts": "1.0.12",
+    "redux": "^3.7.2"
   },
   "scripts": {
     "start": "react-scripts start",
